--- a/EIPS/eip-6147.md
+++ b/EIPS/eip-6147.md
@@ -165,7 +165,7 @@ abstract contract ERC6147 is ERC721, IERC6147 {
         if (guard != address(0)) { 
             require(guard == _msgSender(), "ERC6147: only guard can change it self"); 
         } else { 
-            require(_isApprovedOrOwner(_msgSender(), tokenId),""ERC6147: caller is not owner nor approved");
+            require(_isApprovedOrOwner(_msgSender(), tokenId),"ERC6147: caller is not owner nor approved");
         } 
 
         if (guard != address(0) || newGuard != address(0)) {
